# Amalgam

./: CMakeLists.txt  README.md  includes.ps1
Amalgam/src/Features/Aimbot/: Aimbot.cpp
Amalgam/src/Features/Aimbot/AimbotGlobal/: AimbotGlobal.cpp  AimbotGlobal.h
Amalgam/src/Features/Aimbot/AimbotHitscan/: AimbotHitscan.cpp
Amalgam/src/Features/Aimbot/AimbotProjectile/: AimbotProjectile.cpp  AimbotProjectile.h
Amalgam/src/Features/ImGui/Menu/: Menu.cpp
Amalgam/src/SDK/: Globals.h  Vars.h
